@@ -1,5 +1,6 @@
 dgm-lib v1.x.x
  * Added documentation for `dgm::JsonLoader`
+ * Changed `dgm::LoaderInterface` to require `std::filesystem::path` instead of `std::string`
 
 dgm-lib v1.10.0
  * `dgm::ResourceManager` can now load `dgm::Clip` from JSON files
